--- a/src/app/css/Quiz.module.css
+++ b/src/app/css/Quiz.module.css
@@ -18,7 +18,7 @@
     border-top: black solid 5px;
 }
 
-.quizSummary {
+.quizDesc {
     grid-area: zone3;
     border-bottom: black solid 5px;
     border-left: black solid 5px;
