--- a/src/app/css/Quiz.module.css
+++ b/src/app/css/Quiz.module.css
@@ -1,39 +1,46 @@
 
 
 .gridContainer {
+    display: grid;
     grid-template-areas:
     'zone1 zone1 zone2 zone2 zone4 zone4'
     'zone3 zone3 zone3 zone3 zone5 zone5'
     ;
+    justify-content: center;
+    width: 100%;
+    border: black solid 5px;
 }
 
 .quizName {
     grid-area: zone1;
-    border-top: black solid 5px;
-    border-left: black solid 5px;
+    font-size: 4em;
 }
 
 .quizNumQuestions {
     grid-area: zone2;
-    border-top: black solid 5px;
+    font-size: 3em;
 }
 
 .quizDesc {
     grid-area: zone3;
-    border-bottom: black solid 5px;
-    border-left: black solid 5px;
 }
 
 .quizPlay {
     grid-area: zone4;
     display: block;
     width: 100%;
-    border: black solid 5px;
 }
 
 .quizSettings {
     grid-area: zone5;
     display: block;
     width: 100%;
-    border: black solid 5px;
+}
+
+.fontCaveat {
+    font-family: 'Caveat', sans-serif;
+}
+
+.fontNunito {
+    font-family: 'NunitoSans', sans-serif;
 }
