Added logos and linked quiz taking/results pages with the homepage (hardcoded data for now).

--- a/src/app/css/QuizTakingPage.module.css
+++ b/src/app/css/QuizTakingPage.module.css
@@ -58,3 +58,8 @@
     /** Slight gray color when hovering **/
     background-color: #ede6e6;
 }
+
+.homeImage {
+    width: 2.5rem;
+    margin: 1rem;
+}
