--- a/src/app/css/QuizResultsPage.module.css
+++ b/src/app/css/QuizResultsPage.module.css
@@ -1,3 +1,37 @@
+.navBar {
+    display: grid;
+    grid-template-columns: auto 1fr auto 1fr auto;
+    align-items: center;
+    justify-items: center;
+    font-size: 2rem;
+    font-weight: bold;
+    text-transform: uppercase;
+    font-family: 'Caveat', sans-serif;
+    margin: 1rem;
+}
+
+.home {
+    width: 2.5rem;
+    justify-self: start;
+}
+
+.navBar h1 {
+    /** Align quiz title to center **/
+    text-align: center;
+    justify-self: center;
+}
+
+.dottedLine {
+    text-align: center;
+    justify-self: center;
+    width: 25rem;
+}
+
+.gear {
+    width: 2.5rem;
+    justify-self: end;
+}
+
 .container {
     display: flex;
     flex-direction: column;
@@ -5,6 +39,7 @@
     /** Align in center **/
     margin: 1rem auto;
     text-transform: uppercase;
+    font-family: 'NunitoSans', sans-serif;
 }
 
 .results {
@@ -25,6 +60,10 @@
     font-size: 1.25rem;
     margin-top: 1rem;
     text-decoration: underline;
+}
+
+.quizItem {
+    margin-bottom: 1rem;
 }
 
 .question {
