--- a/src/app/css/SignupLoginPage.module.css
+++ b/src/app/css/SignupLoginPage.module.css
@@ -13,12 +13,16 @@
     font-size: 2rem;
     font-weight: bold;
     margin-bottom: 1rem;
+    /** Heading font **/
+    font-family: 'Caveat', sans-serif;
 }
 
 .formContainer {
     display: flex;
     flex-direction: column;
     align-items: center;
+    /** Regular text font **/
+    font-family: 'NunitoSans', sans-serif;
 }
 
 .fieldsContainer {
@@ -65,6 +69,7 @@
 .link {
     /** Slightly smaller font **/
     font-size: 0.9rem;
+    font-family: 'NunitoSans', sans-serif;
 }
 
 /** Styles for Login/Signup text in sentence **/
@@ -75,8 +80,4 @@
 .link span:hover {
     /** Slight gray color when hovering **/
     color: #ede6e6;
-}
-
-.name {
-
 }
