--- a/src/app/css/SignupLoginPage.module.css
+++ b/src/app/css/SignupLoginPage.module.css
@@ -47,7 +47,7 @@
 .inputContainer {
     display: flex;
     flex-direction: column;
-    width: 18rem;
+    width: 30vw;
     margin-bottom: 1rem;
 }
 
@@ -65,7 +65,7 @@
 }
 
 .button {
-    width: 10rem;
+    width: 15vw;
     padding: 1rem;
     margin: 1rem 0;
     font-weight: bold;
