--- a/src/app/css/QuizResultsPage.module.css
+++ b/src/app/css/QuizResultsPage.module.css
@@ -70,7 +70,7 @@
     font-size: 1rem;
     font-weight: bold;
     margin-bottom: 1rem;
-    width: 30rem;
+    width: 40vw;
     height: 7.5rem;
     padding: 1rem;
     border: .25rem solid black;
@@ -86,7 +86,7 @@
     display: flex;
     align-items: center;
     font-size: 1rem;
-    width: 30rem;
+    width: 40vw;
     padding: 1rem;
     border: .25rem solid black;
     margin-bottom: 0.25rem;
