--- a/src/app/css/QuizEditPage.module.css
+++ b/src/app/css/QuizEditPage.module.css
@@ -8,7 +8,7 @@
     justify-content: space-between;
 }
 
-.mainContent {
+.formContainer{
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -24,4 +24,36 @@
     border: solid black 5px;
     padding: .75em 2em;
     font-size: 2.5em;
+}
+
+.quizProps {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.quizProp {
+    display: flex;
+    flex-direction: row;
+    margin-bottom: 2em;
+}
+
+.quizPropLabel {
+    font-family: Caveat;
+    font-size: 3em;
+    margin-right: 1em;
+}
+
+.quizPropInput {
+    font-family: NunitoSans;
+    font-size: 1.5em;
+    width: 20em;
+    border: solid black 4px;
+    padding: .25em;
+}
+
+.textArea {
+    max-height: 5em;
+    min-height: 2em;
 }
