--- a/src/app/css/NavBar.module.css
+++ b/src/app/css/NavBar.module.css
@@ -4,7 +4,6 @@
     align-items: center;
     padding: 1rem;
     background-color: white;
-    border-bottom: 1px solid #eaeaea;
     height: 60px;
   }
   
@@ -26,14 +25,10 @@
   
   .title {
     margin: 0;
-    font-size: 1.5rem;
-    font-weight: 600;
+    font-size: 2rem;
+    font-weight: bold;
     color: #333;
-    cursor: default;
-  }
-  
-  .title[onClick] {
-    cursor: pointer;
+    font-family: 'Caveat', sans-serif;
   }
   
   .titleInput {
