--- a/src/app/css/NavBar.module.css
+++ b/src/app/css/NavBar.module.css
@@ -2,7 +2,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 1rem;
+    padding: 4rem 3rem;
     background-color: white;
     height: 60px;
   }
@@ -22,10 +22,16 @@
     align-items: center;
     margin: 0 1rem;
   }
+
+  .divider {
+    border-top: 5px dashed black;
+    padding-left: 35%;
+    margin: 3em;
+  }
   
   .title {
     margin: 0;
-    font-size: 2rem;
+    font-size: 2.7rem;
     font-weight: bold;
     color: #333;
     font-family: 'Caveat', sans-serif;
