--- a/src/app/css/Answer.module.css
+++ b/src/app/css/Answer.module.css
@@ -2,6 +2,7 @@
     display: flex;
     flex-direction: row;
     margin-bottom: .5em;
+    gap: .5em;
 }
 
 .letter {
@@ -15,7 +16,6 @@
 .content {
     border: solid black 2px;
     padding: 1em;
-    margin-left: .5em;
     width: 100%;
     font-family: NunitoSans;
 }
