--- a/src/app/css/NavBar.module.css
+++ b/src/app/css/NavBar.module.css
@@ -3,7 +3,6 @@
     justify-content: space-between;
     align-items: center;
     padding: 4rem 3rem;
-    background-color: white;
     height: 60px;
   }
   
@@ -33,14 +32,14 @@
     margin: 0;
     font-size: 2.7rem;
     font-weight: bold;
-    color: #333;
+    color: black;
     font-family: 'Caveat', sans-serif;
   }
   
   .titleInput {
     font-size: 1.5rem;
     font-weight: 600;
-    color: #333;
+    color: black;
     border: none;
     border-bottom: 2px solid #0070f3;
     background: transparent;
