--- a/src/app/css/SettingsPage.module.css
+++ b/src/app/css/SettingsPage.module.css
@@ -1,8 +1,13 @@
-.container {
-    padding: 2rem;
+.userContainer {
+  padding: 2rem 2rem 0.5rem 2rem;
+  display: flex;
+  flex-direction: column;
+}
+
+.quizContainer {
+    padding: 0.5rem 2rem 2rem 2rem;
     display: flex;
     flex-direction: column;
-    gap: 2rem;
   }
   
   .editSection {
