--- a/src/app/css/QuizEditPage.module.css
+++ b/src/app/css/QuizEditPage.module.css
@@ -14,6 +14,10 @@
     margin: 2em 0;
 }
 
+.hrSeparate.darkMode {
+    border: solid white 5px;
+}
+
 .submitButton {
     border: solid black 5px;
     padding: .75em 2em;
@@ -45,6 +49,11 @@
     width: 20em;
     border: solid black 4px;
     padding: .25em;
+    color: black;
+}
+
+.quizPropInput.darkMode {
+    filter: invert(1);
 }
 
 .textArea {
