--- a/src/app/css/Quiz.module.css
+++ b/src/app/css/Quiz.module.css
@@ -38,7 +38,7 @@
     justify-content: space-between;
     align-items: flex-start;
     width: 100%;
-    padding: .25em .5em;
+    padding: .25em 2em;
 }
 
 .quizName {
